# starkbank-webhook-test

./: .gitignore  README.md  main.py  pyproject.toml
starkbank_webhook_test/: README.md  constants.py  starkbank_integration.md  starkbank_integration.py
starkbank_webhook_test/auth/: authenticator.md  authenticator.py
starkbank_webhook_test/services/: README.md  invoice_generator.py  transfer_generator.md  transfer_generator.py
tests/: test_authenticator.py  test_starkbank_integrantion.py
